# rta-dataprocessor

./: .gitignore  compile.sh  config.json  config1.json  config_Nunzio.json  config_distributed.json  config_forwarder.json  config_kafka.json  config_test.json  confignet.json  gfse.py  run_container.sh
c++/: .gitignore  CMakeLists.txt  DL2model.xml  README.md  RTADataProcessorConfig.cmake.in  build-in-docker.sh  build.sh  config-rp-dam.json  config.json  install.sh  package.sh  run.sh
c++/gs_examples_communication/: CMakeLists.txt
c++/gs_examples_communication/gs_examples_serialization/ccsds/: CMakeLists.txt
c++/gs_examples_communication/gs_examples_serialization/ccsds/include/: config.h  generators.cpp  packet.cpp  packet.h
c++/gs_examples_communication/include/: utils.cc  utils.hh  utils2.hh
c++/gs_examples_communication/src/zeromq/: config.txt
c++/gs_examples_communication/src/zeromq/ccsds/: CCSDSConsumer.cpp  CCSDSProducer.cpp
c++/gs_examples_communication/src/zeromq/include/: producer.hh
c++/include/: MonitoringPoint.h  Supervisor.h  Supervisor1.h  Supervisor2.h  SupervisorCtrlServer.h  ThreadSafeQueue.h  Worker1.h  Worker2.h  WorkerBase.h  WorkerManager.h  WorkerManager1.h  WorkerManager2.h  WorkerThread.h  utils2.hh
c++/include/rtadp/: MonitoringPoint.h  MonitoringThread.h  Supervisor.h  ThreadSafeQueue.h  WorkerBase.h  WorkerManager.h  WorkerProcess.h  WorkerThread.h
c++/interface/: CMakeLists.txt
c++/interface/include/: config.h  packet.h
c++/interface/src/: packet.cpp
c++/rtadp-proto1/: ProcessDataConsumer1.cpp  Supervisor1.cpp  SupervisorCtrlServer.cpp  Worker1.cpp  WorkerManager1.cpp
c++/rtadp-proto1/include/: Supervisor1.h  SupervisorCtrlServer.h
c++/rtadp-proto2/: ProcessDataConsumer2.cpp  Supervisor2.cpp  Worker2.cpp  WorkerManager2.cpp
c++/rtadp-proto2/include/: Supervisor2.h  Worker2.h
c++/src/: ConfigurationManager.cpp  MonitoringThread.cpp  MonitorintPoint.cpp  Supervisor.cpp  WorkerBase.cpp  WorkerLogger.cpp  WorkerManager.cpp  WorkerProcess.cpp  WorkerThread.cpp
c++/src/rtadp-proto/: ProcessDataConsumer2.cpp  Supervisor1.cpp  Supervisor2.cpp  Worker1.cpp  Worker2.cpp  WorkerManager1.cpp  WorkerManager2.cpp
conda/: environment.yml
env/: Dockerfile.arm  Dockerfile.base  Dockerfile.prod  Dockerfile.ubuntu  README.md  build-base-image.sh  build-prod-image.sh  entrypoint.sh
env/docker_base/: build-dependencies.sh  install-system-packages.sh
rtadp-proto/: avro_schema.py
rtadp-proto/ACS/: README.md
rtadp-proto/ACS/src/rtamanagerImpl/: DataProcessorImpl.py
test/: gfse.py  test_integration.py  test_integration_rtadp1.py  test_integration_rtadp2.py  waveform.py
test/ml_models/: float_16.tflite
workers/: ConfigurationManager.py  Supervisor.py  WorkerBase.py  WorkerManager.py  WorkerProcess.py  WorkerThread.py  setup.py
workersc++/: ConfigurationManager.cpp  MonitoringPoint.cpp  MonitoringThread.cpp  Supervisor.cpp  WorkerBase.cpp  WorkerLogger.cpp  WorkerManager.cpp  WorkerThread.cpp
